k8s/cert-manager/coit-backend-ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coit-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.basil.com.34.93.5.66.sslip.io
    secretName:  api.basil.com.34.93.5.66.sslip.io
  rules:
  - host: api.basil.com.34.93.5.66.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coit-backend1-lb
            port:
              number: 80
